--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@ Author URL: http://w3layouts.com
                 <div class="container">
                     <div class="copyright-footer">
                         <div class="columns text-lg-left">
-                            <p>© 2022 Stroll. All rights reserved. Design by  Yash<a href="" target="_blank"> W3Layouts</a>
+                            <p>© 2022 Stroll. All rights reserved. Design by  Yash<a href="" target="_blank"></a>
                             </p>
                         </div>
                         <ul class="columns text-lg-right">
