--- a/services.html
+++ b/services.html
@@ -599,7 +599,7 @@ Author URL: http://w3layouts.com
                 <div class="container">
                     <div class="copyright-footer">
                         <div class="columns text-lg-left">
-                            <p>© 2020 Stroll. All rights reserved. Design by <a href="https://w3layouts.com/" target="_blank"> W3Layouts</a>
+                            <p>© 2022 Stroll. All rights reserved. Design by Yash<a href="" target="_blank"></a>
                             </p>
                         </div>
                         <ul class="columns text-lg-right">
